--- a/ML_Model_ipyb_Colaboratory.ipynb
+++ b/ML_Model_ipyb_Colaboratory.ipynb
@@ -7,7 +7,7 @@
       "name": "ML_Model.ipyb - Colaboratory",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOoydIywsMUnIDDtP5dJPdj",
+      "authorship_tag": "ABX9TyOZCvYmCD7X7xbBnUZg0pMC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -150,8 +150,7 @@
         "################Convert labels to one hot ##################\n",
         "from keras.utils import np_utils\n",
         "\n",
-        "#NB_CLASSES = 24                      # (number of classes)\n",
-        "NB_CLASSES = 5\n",
+        "NB_CLASSES = 5                      # (number of classes)\n",
         "\n",
         "y_train_one_hot = np_utils.to_categorical(y_train, NB_CLASSES) \n",
         "y_test_one_hot  = np_utils.to_categorical(y_test, NB_CLASSES)\n",
